[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KH! <gk_attala@esi.dz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
xgboost = "^2.0.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
